2003-11-25  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (CVS_RSH): Read config file sooner to pickup RSH_DFLT
	for use in setting CVS_RSH variable.
	* sanity.config.sh.in (RSH_DFLT): Use new substitution variable.
	* Makefile.am (localcheck, remotecheck): Depend on sanity.config.sh.
	* Makefile.in: Regenerate for new Makefile.am.

	* update.c (join_file): Deal with rev1 == NULL due to rev1 merge tag
	being missing from the current file.
	* sanity.sh (join6): New tests for this case.
	(trace): Renumber test cases.
	
2003-11-24  Larry Jones  <lawrence.jones@eds.com>

	* diff.c (diff_file_nodiff): use_rev1 does *not* imply that diff_rev1
	is not null, diff_date1 could be set instead (ditto for use_rev2).
	(Reported by <jnelson-cvsbug@jamponi.net>.)

2003-11-24  Mark D. Baushke  <mdb@cvshome.org>

	* client.c (connect_to_forked_server): Avoid passing NULL strings
	to TRACE. Calling printf("%s",NULL) is not defined and may
	segfault on some systems.	
	* diff.c (diff_file_nodiff): Ditto.
	* main.c (main): Ditto.
	* modules.c (do_module): Ditto.
	* patch.c (patch_proc): Ditto.
	* rcs.c (RCS_cmp_file): Ditto.
	* recurse.c (start_recursion): Ditto.
	* root.c (parse_cvsroot): Ditto.
	* server.c (dirswitch, server_pathname_check, dirswitch,
	serve_directory):  Ditto.
	* tag.c (rtag_proc, check_fileproc, tag_check_valid): Ditto.
	* sanity.sh (trace): New testcase to test the -t option.
	(RCSDATE, ISODATE, PFMT): New variables in aid of the trace tests.
	(dotest_fail_sort): New function in aid of the trace tests.
	(template): Fix cleanup.

2003-11-24  Derek Price  <derek@ximbiot.com>

	* sanity.sh (modes3): Skip modes3-5 entirely under Cygwin since
	permisions are broken there.  This change removes most of the earlier
	Cygwin differentiation in this test ($cygwin_hack & $cygwin_hack2) in
	favor of skipping the test entirely.

2003-11-24  Derek Price  <derek@ximbiot.com>

	* sanity.sh: Add `-h <hostname>' option to enable testing across a